# snowpack

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  run_finetune.sh  run_inference.sh  run_kfold.sh  run_zero_shot.sh  visualize_gt.sh  weights_20_2.pt
assets/: 01_processed_20240108_16-29.tiff  doc.md
configs/: binary.json  boundary_resize_simple.json  boundary_resize_simple_dilate.json  boundary_resize_simple_dilate20_epochs200.json  boundary_resize_simple_epochs200.json  layer_resize_simple_zero_shot.json  multiclass_boundary.json  multiclass_full_image.json  multiclass_full_image_no_transform.json  multiclass_larger_lr.json  multiclass_more_overlap.json  multiclass_no_transform.json  multiclass_ps_400_larger_lr.json  multiclass_ps_400_medium_lr.json  multiclass_ps_400_no_transform.json  multiclass_ps_400_overlap.json  multiclass_ps_400_smaller_lr.json  multiclass_smaller_lr.json  multiclass_w_overlap.json  revert_boundary_resize_simple.json  revert_boundary_resize_simple_dilate.json  revert_boundary_resize_simple_dilate_7.json  revert_boundary_resize_simple_epochs200.json  revert_boundary_resize_simple_zero_shot.json
docs/: conda_environment_creation.md  environment_creation_drac.md  environment_creation_mila.md  migrating_to_drac.md  poetry_installation.md
scripts/: README.md
snowpack/: augmentation.py  dataset.py  dynamic_tiled_dataset.py  get_prediction.py  get_prediction_older.py  main_crossvalidate.py  main_finetune.py  main_inference.py  main_inference_zero_shot.py  train.py  train_epochs.py  train_epochs_prompts.py
snowpack/dataset/: augmentation.py  data_utils.py  dataset.py  dynamic_tiled_dataset.py
snowpack/model/model_configs/: sam2.1_hiera_s.yaml
tests/: augmentation_test.py  dynamic_tiled_dataset_test.py  visualize_tiling.py
