[tool.poetry]
name = "snowpack"
version = "0.0.0"
description = "snowpack layer segmentation"
authors = ["Jennifer Marks, Karla Felix Navarro, Olya Mastikhina, Marlena Reil <marlena1@gmx.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.group.dev]
optional = true

# [tool.poetry.group.pypi]
# optional = true

#[tool.poetry.group.pypi.dependencies]
## Commented out as a reference/example
## Optional dependencies that need to be installed with poetry
## `poetry install --with pypi`

[tool.poetry.dependencies]
# Main dependencies that can be still installed with the command
# `pip install -e .` and `pip install -e . --no-index` 
# Ideal for main project dependencies and those that need to be installed
# via DRAC pre-built wheels
#
# Strongly recommended to use ~ instead of ^ for better compatibility and 
# reproducibility
#
# ex. requests = "~2.31.0"
python = ">=3.10,<3.12"
sam-2 = {git = "https://github.com/facebookresearch/sam2.git", rev = "c2ec8e14a185632b0a5d8b161928ceb50197eddc"}
rasterio = "^1.4.2"
opencv-python = "^4.10.0.84"
patchify = "^0.2.3"
wandb = "^0.18.7"
matplotlib = "^3.9.3"

[tool.poetry.group.dev.dependencies]
# Optional dependencies that need to be installed with poetry
# `poetry install --with dev`
pytest = "~8.2.2"
pre-commit = "^3.6.2"
pylint = "^3.2.7"
flake8 = "^7.1.1"
mccabe = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#
# Scripts
#
[tool.poetry.scripts]

#
# Tools
#
[tool.flake8]
max-line-length = 120
ignore = ["E203", "E266", "E501", "W503"]
docstring-convention = "numpy"
max-complexity = 20
per-file-ignores = []
exclude = [
    ".git",
    "migrations",
    "__pycache__"
]

[tool.pylint]
disable = "C0114,C0115,C0116,R0903,R1710,W1203"
max-line-length = 120
max-locals = 20
max-args = 16
max-attributes = 20

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flynt]
line-length = 120
transform-concats = true
verbose = true

[tool.docformatter]
style = "numpy"
pre-summary-newline = true
wrap-descriptions = 120
wrap-summaries = 120
blank = false
exclude = []
recursive = true
